US1660: Presenter for preserve-formatting CSS class logic

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
@@ -48,7 +48,7 @@ else
                             </span>
                         </p>
                     </div>
-                    <p class="preserve-formatting">@vacancy.Description</p>
+                    <p class="@vacancy.Description.GetPreserveFormattingCssClass()">@vacancy.Description</p>
                     <div class="grid-wrapper">
                         <div class="grid grid-2-3">
                             <ul class="list-text no-btm-margin">
