--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/EditorTemplates/Comment.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/EditorTemplates/Comment.cshtml
@@ -5,7 +5,7 @@
     <details class="open" open>
         <summary>@ViewData["Label"]</summary>
         <div class="detail-content qa-comment">
-            <div class="blocklabel-single-container preserve-formatting">@Model</div>
+            <div class="blocklabel-single-container @Model.GetPreserveFormattingCssClass()">@Model</div>
         </div>
     </details>
 }
