--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/DisplayTemplates/EmployerQuestionAnswersViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/DisplayTemplates/EmployerQuestionAnswersViewModel.cshtml
@@ -6,14 +6,14 @@
         @if (!string.IsNullOrWhiteSpace(Model.SupplementaryQuestion1))
         {
             <div class="form-group">
-                <p class="form-label text preserve-formatting">@Html.Raw(Model.SupplementaryQuestion1)</p>
+                <p class="form-label text @Model.SupplementaryQuestion1.GetPreserveFormattingCssClass()">@Html.Raw(Model.SupplementaryQuestion1)</p>
                 <span class="form-prepopped prewrap">@Html.Raw(Model.CandidateAnswer1)</span>
             </div>
         }
         @if (!string.IsNullOrWhiteSpace(Model.SupplementaryQuestion2))
         {
             <div class="form-group">
-                <p class="form-label text preserve-formatting">@Html.Raw(Model.SupplementaryQuestion2)</p>
+                <p class="form-label text @Model.SupplementaryQuestion2.GetPreserveFormattingCssClass()">@Html.Raw(Model.SupplementaryQuestion2)</p>
                 <span class="form-prepopped prewrap">@Html.Raw(Model.CandidateAnswer2)</span>
             </div>
         }
