--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_OfflineVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_OfflineVacancy.cshtml
@@ -14,7 +14,7 @@
                 Employer's application instructions
                 @Html.Partial(CommentViewModel.PartialIconView, Html.GetCommentViewModel(Model, m => m.NewVacancyViewModel.OfflineApplicationInstructions, Model.NewVacancyViewModel.OfflineApplicationInstructionsComment, Model.BasicDetailsLink))
             </h2>
-            <p id="application-instructions" class="preserve-formatting">@Model.NewVacancyViewModel.OfflineApplicationInstructions</p>
+            <p id="application-instructions" class="@Model.NewVacancyViewModel.OfflineApplicationInstructions.GetPreserveFormattingCssClass()">@Model.NewVacancyViewModel.OfflineApplicationInstructions</p>
             @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.OfflineApplicationInstructions, Model.BasicDetailsLink, Model.NewVacancyViewModel.OfflineApplicationInstructionsComment))
         </div>
         <div class="@editableItemClass">
