--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
@@ -20,7 +20,7 @@
             @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModel(Model, m => m.FurtherVacancyDetailsViewModel.WorkingWeek, ViewData.ModelState, Model.SummaryLink, Model.FurtherVacancyDetailsViewModel.WorkingWeekComment))
         }
     </h3>
-    <p id="vacancy-working-week" itemprop="workHours" class="preserve-formatting">@Model.FurtherVacancyDetailsViewModel.WorkingWeek</p>
+    <p id="vacancy-working-week" itemprop="workHours" class="@Model.FurtherVacancyDetailsViewModel.WorkingWeek.GetPreserveFormattingCssClass()">@Model.FurtherVacancyDetailsViewModel.WorkingWeek</p>
     @if (Model.VacancyType == VacancyType.Apprenticeship)
     {
         <p>Total hours per week: @Model.FurtherVacancyDetailsViewModel.HoursPerWeek</p>
