--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_CommentIcon.cshtml
@@ -3,6 +3,6 @@
 @if (Model.HasComment && Model.Status.IsStateReviewable())
 {
     <a href="@Model.ViewCommentUrl">        
-        <img src="~/Content/_assets/img/bubble.svg" class="raa-icon-comment-img" alt="there are comments" />
+        <img src="~/Content/_assets/img/bubble.svg" class="raa-icon-comment-img" alt="there are comments" title="there are comments" />
     </a>
 }
