Fixing missing anchors and exception when viewing applications

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_CommentIcon.cshtml
@@ -1,5 +1,6 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.CommentViewModel
-    
+
+<a name="@Model.AnchorName"></a>
 @if (Model.HasComment && Model.Status.IsStateReviewable())
 {
     <a href="@Model.ViewCommentUrl">        
