--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_EditLink.cshtml
@@ -1,5 +1,6 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
 
+<a name="@Model.AnchorName"></a>
 @if (Model.Status.IsStateReviewable())
 {
     <a href="@Model.EditUrl" class="edit-comment-link">Edit/comment</a>
