--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_ValidationResultIcons.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_ValidationResultIcons.cshtml
@@ -1,17 +1,17 @@
 ﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model ValidationResultViewModel
 
+<a name="@Model.AnchorName"></a>
 @if (Model.Status.IsStateReviewable())
 {
-    <a name="@Model.AnchorName"></a>
     if (Model.HasWarning)
     {
         <a href="@Model.ViewValidationResultUrl">
             <i class="fa fa-flag the-icon" title="@Model.Warning"></i>
         </a>
     }
-    else
-    {        
+    else if (!Model.HasError)
+    {
         <img src="~/Content/_assets/img/checkmark.svg" class="raa-icon-checkmark-img"/>
     }
 }
