--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -88,13 +88,13 @@
                     <p>You've made @Model.UnsuccessfulApplicationsCount candidates unsuccessful</p>
                 }
 
-                @if (Model.NewApplicationsAcrossAllVacanciesCount + Model.ViewedApplicationsCount == 1)
+                @if (Model.NewApplicationsCount + Model.ViewedApplicationsCount == 1)
                 {
                     <p>1 candidate needs to be notified whether their application has been successful/unsuccessful</p>
                 }
-                else if (Model.NewApplicationsAcrossAllVacanciesCount + Model.ViewedApplicationsCount > 1)
+                else if (Model.NewApplicationsCount + Model.ViewedApplicationsCount > 1)
                 {
-                    <p>@(Model.NewApplicationsAcrossAllVacanciesCount + Model.ViewedApplicationsCount) candidates need to be notified whether their applications have been successful/unsuccessful</p>
+                    <p>@(Model.NewApplicationsCount + Model.ViewedApplicationsCount) candidates need to be notified whether their applications have been successful/unsuccessful</p>
                 }
             </div>
         </section>
@@ -120,13 +120,13 @@
                         <figure class="data">
                             @if (filterType == VacancyApplicationsFilterTypes.New)
                             {
-                                <p class="count">@Model.NewApplicationsAcrossAllVacanciesCount</p>
+                                <p class="count">@Model.NewApplicationsCount</p>
                                 <figcaption><h2>New</h2></figcaption>
                             }
                             else
                             {
                                 <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.New))" class="vacancy-filter">
-                                    <p class="count">@Model.NewApplicationsAcrossAllVacanciesCount</p>
+                                    <p class="count">@Model.NewApplicationsCount</p>
                                     <figcaption><h2>New</h2></figcaption>
                                 </a>
                             }
