DE181: Validation for Future Prospects and Things to Consider matching AVMS

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_RequirementsAndProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_RequirementsAndProspects.cshtml
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="grid grid-1-2">
-            @if (Model.VacancyType == VacancyType.Apprenticeship && !string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects))
+            @if (Model.VacancyType == VacancyType.Apprenticeship && (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects) || Model.Status.IsStateReviewable()))
             {
                 <div class="@editableItemClass">
                     <div class="text">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             }
-            @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider))
+            @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider) || Model.Status.IsStateReviewable())
             {
                 <div class="@editableItemClass">
                     <div class="text">
