Normalize categories and subcategories to the new format in the mediator instead of the SearchProvider. Unit tests.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchUpdate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchUpdate.cshtml
@@ -63,6 +63,7 @@
                 @* This is declared explicitly because we want the value from the model NOT from the URL and the view engine will favour the (potentially incorrect) one from the URL *@
                 <input id="Hash" name="Hash" type="hidden" value="@Model.LatLonLocHash()" />
                 @Html.HiddenFor(m => m.SearchMode)
+                @Html.HiddenFor(m=> m.Category)
                 @* This is declared explicitly because we want the value from the model NOT from the URL and the view engine will favour the (potentially incorrect) one from the URL *@
                 <input id="LocationType" name="LocationType" type="hidden" value="@Model.LocationType" />
             </div>
