US1998: Accessibility fixes part I

--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -121,6 +121,7 @@ h2{
         float: left;
         a {
             text-decoration: none;
+            display: block;
         }
         figure.data {
             .count {
