--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -118,6 +118,7 @@ h2{
         float: left;
         a {
             text-decoration: none;
+            display: block;
         }
         figure.data {
             .count {
