US1998: Accessibility Fixes Part II

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Scripts.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Scripts.cshtml
@@ -63,6 +63,6 @@
         }());
     </script>
     <noscript>
-        <meta http-equiv="refresh" content="@string.Format("{0};{1}", ViewBag.SessionTimeout, ViewBag.SessionTimeoutUrl)">
+        <meta http-equiv="refresh" content="@string.Format("{0};url={1}", ViewBag.SessionTimeout, ViewBag.SessionTimeoutUrl)">
     </noscript>
 }
