--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
             </div>
             <div class="global-header__nav">
                 <div class="global-header__title beta" id="headerLinkFAA">
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Recruit an apprentice</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)" title="Home">Recruit an apprentice</a>
                 </div>
             </div>
         </div>
