Fixed all the figure tag validation errors

--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
@@ -6222,7 +6222,8 @@ h2 a i.raa-icon-comment {
     display: block;
     float: left; }
     .vacancies-summary li a {
-      text-decoration: none; }
+      text-decoration: none;
+      display: block; }
     .vacancies-summary li figure.data .count {
       font-family: "ntatabularnumbers", "nta", Arial, sans-serif;
       font-size: 48px;
