--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="grid grid-1-2">
-            <p class="form-label">Change role</p>
+            <label class="form-label">Change role</label>
             @Html.DropDownListFor(m => m.AgencyUser.RoleId, Model.AgencyUser.Roles, new {id = "role", @class = "chosen-select grid grid-1-1"})
             @if (Model.AgencyUser.RoleId != "QA_advisor")
             {
@@ -44,7 +44,7 @@
                 </h2>
             </div>
             <div class="grid grid-1-2">
-                <p class="form-label">Change team</p>
+                <label class="form-label">Change team</label>
                 @Html.DropDownListFor(m => m.AgencyUser.RegionalTeam, Model.AgencyUser.RegionalTeams, new { id = "regional-team", @class = "chosen-select grid grid-1-1" })
                 <noscript>
                     <button class="button" name="DashboardAction" value="ChangeTeam">Change team</button>
