--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -20,7 +20,10 @@
             <p class="small-btm-margin">@Model.Employer.Address.AddressLine2</p>
             <p class="small-btm-margin">@Model.Employer.Address.AddressLine3</p>
             <p class="small-btm-margin">@Model.Employer.Address.Town</p>
-            <p class="small-btm-margin">@Model.Employer.Address.County</p>
+            @if (Model.Employer.Address.County != "Please Select...")
+            {
+                <p class="small-btm-margin">@Model.Employer.Address.County</p>
+            }
             <p class="small-btm-margin">@Model.Employer.Address.Postcode</p>
         </div>
     </div>
