DE81: Remove withdraw vacancy link

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -13,7 +13,7 @@
 }
 @if (Model.Status.CanWithdrawVacancy())
 {
-    <p class="small-btm-margin">
+    <!--<p class="small-btm-margin">
         <a href="">Withdraw this @vacancyTypeText</a>
-    </p>
+    </p>-->
 }
