Added missing frameworks from Pre.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -1,5 +1,4 @@
-﻿@using SFA.Apprenticeships.Web.Common.Extensions
-@using SFA.Apprenticeships.Web.Manage.Constants
+﻿@using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model SFA.Apprenticeships.Web.Manage.ViewModels.HomeViewModel
 
