Changed button caption on searching for existing employers page.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -52,7 +52,7 @@
                         @* ReSharper disable once Html.IdNotResolved *@
                         <label data-target="name-location-search-panel" for="name-location-search" class="block-label @nameAndLocationSearchSelected">
                             @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.NameAndLocation, new {id = "name-location-search", aria_controls = "name-location-search-panel"})
-                            Name and location
+                            Name or location
                         </label>
                         @* ReSharper disable once Html.IdNotResolved *@
                         <label data-target="edsUrn-search-panel" for="edsUrn-search" class="block-label @edsErnSearchSelected">
